--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 <header>PixelNailz Booking</header>
 
 <div class="container">
-  <h2>Book Your Appointment (12:00 PM)</h2>
+  <h2>Book Your Appointment</h2>
   <form id="bookingForm">
     <label for="name">Full Name</label>
     <input id="name" type="text" required>
